2008-07-02  Marcus D. Hanwell  <marcus@cryos.org>

	* CMakeLists.txt, src/CMakeLists.txt, src/formats/CMakeLists.txt:
	Reduce the number of version variables floating around to only those
	that are used...

	* CMakeLists.txt, src/formats/CMakeLists.txt: Use a versioned plugin
	directory as autotools does.

2008-07-02  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/locale.cpp: Add string.h header, from patch by Marcus
	Hufgard. Allows compilation with GCC 4.3.1 on Linux:
	PR#2008642.

	* src/formats/gausszmatformat.cpp: Add definition of
	strcasestr if not defined. Solves compile problems on Cygwin.

	* configure.in, src/config.h.in, configure: Check for
	rpc/xdr.h needed for xtcformat.

	* src/formats/xtcformat.cpp: Use new HAVE_RPC_XDR_H #define.

	* src/formats/smilesformat.cpp: Bring back FIX format, killed
	during merger of canonical and standard smiles.

	* src/rotamer.cpp, src/locale.cpp, src/base.cpp,
	include/openbabel/atom.h, include/openbabel/locale.h,
	include/openbabel/forcefield.h,
	include/openbabel/pointgroup.h,
	include/openbabel/fingerprint.h: Doxygen updates for 2.2.0.

2008-07-02  Chris Morley

	* src/descriptor.cpp(PredictandSave): don't duplicate an existing
	OBPairData. Was crashing when adding a property that was already
	present. 
	 
	* src/formats/smilesformat.cpp(StandardLabels): A couple of vectors now
	have 2147483647 pushed when the atom is H, to match the situation with
	canonical ordering, rather than ending up with a size smaller than the
	number of atoms. I assume 2147483647 = 2^31-1 is just a big number?
	Fixes bug 1999348.

2008-07-01  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/kekulize.cpp (expandcycle): Add more flexible API for
	expandcycle.

	* scripts/perl/Makefile.PL: Update from Noel for PR#2007797.

	* Makefile.*, configure.*: Update for 2.2.0 release.

2008-07-01  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/formats/atomrecord.cpp: Fix bug where arginine hydrogen atoms